Changed Port no from 80 to 8008. Modified PHP and MySQL Versions

--- a/php/php.ini
+++ b/php/php.ini
@@ -1,5 +1,5 @@
 [Date]
-date.timezone = "Asia/Tokyo"
+date.timezone = "Asia/Calcutta"
 [mbstring]
 mbstring.internal_encoding = "UTF-8"
-mbstring.language = "Japanese"
+mbstring.language = "English"
